--- a/LIGHT/libraryroot.custom.css
+++ b/LIGHT/libraryroot.custom.css
@@ -6904,6 +6904,11 @@ button.DialogButton.appdetailsbutton_AppDetailsButton_3Cdin.appdetailsbutton_Lef
   background-color: transparent !important;
   color: var(--FILTERLABEL) !important;
 }
+
+.gamelistsearchbar_Container_20QAC .gamelistsearchbar_AdvancedSearchContainer_vCCmY {
+  border-radius:var(--BORDERRADIUS)!important;
+}
+
 .appgrid_SortingDropDown_1tBzy .appgrid_SortingDropDownLabel_1ljKT {
   color: var(--ACCENT) !important;
   font-weight: 400 !important;
